--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
      <style type="text/css">
         * { margin: 0; padding: 0; }
-        body { font: 16px Helvetica, Sans-Serif; line-height: 24px; background: url(images/noise.jpg); }
+        body { font: 16px Helvetica, Sans-Serif; line-height: 24px; background: url(noise.jpg); }
         .clear { clear: both; }
         #page-wrap { width: 800px; margin: 40px auto 60px; }
         #pic { float: right; margin: -30px 0 0 0; }
@@ -46,7 +46,7 @@ img{
 
     <div id="page-wrap">
 
-        <img src="images/vish1.jpg" alt="vish" id="pic" style="width:200px;height:250px;" />
+        <img src="vish1.jpg" alt="vish" id="pic" style="width:200px;height:250px;" />
 
         <div id="contact-info" class="vcard">
 		<h1 class="fn">Chalavadi Vishnu</h1> </br>
