--- a/index.html
+++ b/index.html
@@ -54,18 +54,26 @@ img{
 	
 	 <div id="objective">
             
+		 
+		 <div class="container">
+ 	 <div class="img">
+		 <a href="https://www.uia.no/en/research/teknologi-og-realfag/autonomous-and-cyber-physical-systems-acps">
+			 <img src="uia-logo.png" style="width:100px;"> </div></a>
+	</div>
+		 
 	<div class="container">
  	 <div class="img">
 		 <a href="https://iith.ac.in/">
 			 <img src="iith_logo.png" style="width:100px;"> </div></a>
 	</div>
-	 
+		 
 	 <div class="container">
 	 <div class="img">
 		 <a href="https://www.iith.ac.in/~ckm/">
 			 <img src="vigil_logo.png" style="width:180px";></div></a>
 			 
 	    </div>
+		 
 		
 	</div>
 	
@@ -76,7 +84,7 @@ img{
 	
 	<div id="objective">
 	  <p>
-		Email (Official) : <a class="email" href="mailto:cs16m18p000001@iith.ac.in">cs16m18p000001@iith.ac.in</a>
+		Email (Official) : <a class="email" href="mailto:cs16m18p000001@iith.ac.in">cs16m18p000001@iith.ac.in</a></br>
                 Email (Personal) : <a class="email" href="mailto:chalavadivishnu@gmail.com">chalavadivishnu@gmail.com</a>
             </p>
 	</div>
@@ -88,8 +96,7 @@ img{
 
         <div id="objective">
             <p>
-                <strong><font color="#323232">Post-Doctoral Research Scholar</font></strong> in <b>Aerial Imagery, Autonomous Vehicles, & Surveillance Video Analytics</b></br>
-		<strong><font color="#323232">Autonomous and Cyber-Physical Systems (ACPS)</font></strong></br>
+                <strong><font color="#323232">Post-Doctoral Research Scholar</font></strong> in <b>Autonomous and Cyber-Physical Systems (ACPS)</b></br>
                <a href="https://scholar.google.com/citations?user=4tMZrRcAAAAJ&hl=en&authuser=1">Google Scholar</a> | <a href="https://www.semanticscholar.org/author/Vishnu-Chalavadi/2070209317">Semantic Scholar</a> | <a href="https://dblp.org/pid/194/5568.html">DBLP</a> | <a href="https://www.researchgate.net/profile/Chalavadi_Vishnu">ResearchGate</a> | <a href="https://orcid.org/0000-0001-9184-3545">ORCID</a> | <a href="https://www.linkedin.com/in/chalavadi-vishnu-phd/">LinkedIn</a> | <a href="https://github.com/cv15nu">Github</a>
             </p>
 
