--- a/index.html
+++ b/index.html
@@ -101,8 +101,8 @@ img{
 
         <div id="objective">
             <p>
-                <strong><font color="#323232">Assistant Professor</font></strong> </br> <b>CSE Dept., IIT Tirupati</b></br>
-               <a href="https://scholar.google.com/citations?user=2a-8giwAAAAJ&hl=en&authuser=1">Google Scholar</a> | <a href="https://www.semanticscholar.org/author/Vishnu-Chalavadi/2070209317">Semantic Scholar</a> | <a href="https://dblp.org/pid/194/5568.html">DBLP</a> | <a href="https://www.researchgate.net/profile/Chalavadi_Vishnu">ResearchGate</a> | <a href="https://orcid.org/0000-0001-9184-3545">ORCID</a> | <a href="https://www.linkedin.com/in/chalavadi-vishnu-phd/">LinkedIn</a> | <a href="https://github.com/cv15nu">Github</a>
+                <strong><font color="#323232">Assistant Professor</font></strong> </br> <b>Deep Learning, CSE Dept. IIT Tirupati</b></br>
+               <a href="https://scholar.google.com/citations?user=2a-8giwAAAAJ&hl=en&authuser=1">Google Scholar</a> | <a href="https://www.semanticscholar.org/author/Vishnu-Chalavadi/2070209317">Semantic Scholar</a> | <a href="https://dblp.org/pid/302/7458.html">DBLP</a> | <a href="https://www.researchgate.net/profile/Chalavadi_Vishnu">ResearchGate</a> | <a href="https://orcid.org/0000-0001-9184-3545">ORCID</a> | <a href="https://www.linkedin.com/in/chalavadi-vishnu-phd/">LinkedIn</a> 
             </p>
 
         </div>
