--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@ img{
 	
 	<div id="objective">
 	  <p>
-		Email (Official) : <a class="email" href="mailto:cs16m18p000001@iith.ac.in">cs16m18p000001@iith.ac.in</a></br>
+		Email (Official) : <a class="email" href="mailto:chalavadivishnu@iittp.ac.in">chalavadivishnu@iittp.ac.in</a></br>
                 Email (Personal) : <a class="email" href="mailto:chalavadivishnu@gmail.com">chalavadivishnu@gmail.com</a>
             </p>
 	</div>
