--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@ img{
 
 		  <div class="container">
  	 <div class="img">
-		 <a href="https://cse.iittp.ac.in/faculty/">
+		 <a href="https://iittp.ac.in/dr-chalavadi-vishnu">
 			 <img src="IITT.png" style="width:120px;"> </div></a>
 	</div>
 		 
@@ -68,13 +68,13 @@ img{
 		 
 	<div class="container">
  	 <div class="img">
-		 <a href="https://iith.ac.in/">
+		 <a href="https://raiith.library.iith.ac.in/jspui/handle/123456789/14934">
 			 <img src="iith_logo.png" style="width:100px;"> </div></a>
 	</div>
 		 
 	 <div class="container">
 	 <div class="img">
-		 <a href="https://www.iith.ac.in/~ckm/">
+		 <a href="https://people.iith.ac.in/ckm/#projects">
 			 <img src="vigil_logo.png" style="width:120px";></div></a>
 			 
 	    </div>
