--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@ img{
 	<br>
 		    <h3>Conferences</h3>
 		    <ol>
-                <li> A. Soumya, <b>Chalavadi Vishnu</b>, and Lingareddy Cenkeramaddi. "Multi-class object classification using deep learning models in automotive object detection scenarios," In <i><b>Proceedings of 16th International Conference on Machine Vision (ICMV)</b></i>, Yerevan, Armenia, vol. 13072, pp. 1-8, Nov. 2023. - <a href="https://doi.org/10.1117/12.3023463"><strong>Paper</strong></a> <br/></li> 
+                <li> A. Soumya, <b>Chalavadi Vishnu</b>, and Lingareddy Cenkeramaddi. "Multi-class object classification using deep learning models in automotive object detection scenarios," <i><b>In Proceedings of 16th International Conference on Machine Vision (ICMV)</b></i>, Yerevan, Armenia, vol. 13072, pp. 1-8, Nov. 2023. - <a href="https://doi.org/10.1117/12.3023463"><strong>Paper</strong></a> <br/></li> 
 		    <li> Dinesh Singh, <b>C. Vishnu</b>, and C. Krishna Mohan. "Real-Time Detection of Motorcyclist without Helmet using Cascade of CNNs on Edge-device," <i><b>In Proceedings of 2020 IEEE 23rd International Conference on Intelligent Transportation Systems (ITSC)</b>, Rhodes, Greece</i>, pp. 1-8, 2020. - <a href="https://ieeexplore.ieee.org/abstract/document/9294747"><strong>Paper</strong></a> <br/></li>
 		    
 		    <li><b>C. Vishnu</b>, Dinesh Singh, C. Krishna Mohan, and Ch. Sobhan Babu. "Detection of Motorcyclists without Helmet in Videos using Convolutional Neural Network," <i><b>In Proceedings of 2017 International Joint Conference on Neural Networks (IJCNN)</b>, Anchorage, Alaska, USA</i>, pp. 3036-3041, 2017. - <a href="https://ieeexplore.ieee.org/document/7966233"><strong>Paper</strong></a> <br/> </li>
