--- a/index.html
+++ b/index.html
@@ -117,21 +117,18 @@ img{
                 <h4>Method and System for Detection of Accident in Traffic Surveillance Videos</h4>
                 <ul>
 			<p><i> Dinesh Singh, <b>C. Vishnu</b>, Debaditya Roy, and C. Krishna Mohan</i> <br/>
-						<strong>Filed : </strong> Jan 1, 2018 <br/>
 						<strong>ID : </strong> 201841003604 <br/>
                 </ul>
 
                 <h4>Method and System for Detection of Crime Events in Surveillance Videos</h4>
                 <ul>
 			<p><i> Dinesh Singh, <b>C. Vishnu</b>, Debaditya Roy, and C. Krishna Mohan </i><br/>
-						<strong>Filed : </strong> Nov 1, 2017 <br/>
 						<strong>ID : </strong> 201741041239 <br/>
                 </ul>
 
                  <h4>A Method and System for Real-time Detection of Traffic Violation by Two-wheeled Riders</h4>
                 <ul>
 			<p><i> Dinesh Singh, <b>C. Vishnu</b>, Debaditya Roy, and C. Krishna Mohan </i><br/>
-						<strong>Filed : </strong> Nov 1, 2017 <br/>
 						<strong>ID : </strong> 201741038813 <br/>
                 </ul>
             </dd>
@@ -139,6 +136,23 @@ img{
 <dd class="clear"></dd>
 <hr style="height:1px;border-width:0;color:gray;background-color:gray">
 <br>
+
+		   <dt>Teaching</dt>
+            <dd>
+		      <h3>Courses</h3>
+               <ul>
+		       <li><i>Adversarial Deep Learning</i>. - Jul-Dec, 2024</li>
+		       <li><i>Data Structures and Algorithms with Lab</i>. - Jul-Dec, 2024</li>
+		       <li><i>Deep Learning - CS518L</i>. - Jan-Jun, 2024</li>
+		       
+                </ul>
+            </dd>
+
+
+<dd class="clear"></dd>
+<hr style="height:1px;border-width:0;color:gray;background-color:gray">
+<br>
+
 		
 		<dt>Publications</dt>
             <dd>
