--- a/index.html
+++ b/index.html
@@ -138,13 +138,13 @@ img{
 
                 <h4>Method and System for Detection of Crime Events in Surveillance Videos</h4>
                 <ul>
-			<p><i> Dinesh Singh, <b>C. Vishnu</b>, Debaditya Roy, and C. Krishna Mohan </i><br/>
+			<p><i> Debaditya Roy, <b>C. Vishnu</b>, Dinesh Singh, and C. Krishna Mohan </i><br/>
 						<strong>ID : </strong> 201741041239 <br/>
                 </ul>
 
                  <h4>A Method and System for Real-time Detection of Traffic Violation by Two-wheeled Riders</h4>
                 <ul>
-			<p><i> Dinesh Singh, <b>C. Vishnu</b>, Debaditya Roy, and C. Krishna Mohan </i><br/>
+			<p><i><b>C. Vishnu</b>, Dinesh Singh, Debaditya Roy, and C. Krishna Mohan </i><br/>
 						<strong>ID : </strong> 201741038813 <br/>
                 </ul>
             </dd>
