--- a/index.html
+++ b/index.html
@@ -62,20 +62,20 @@ img{
 		 
 		 <div class="container">
  	 <div class="img">
-		 <a href="https://www.uia.no/en/research/teknologi-og-realfag/autonomous-and-cyber-physical-systems-acps/">
+		 <a href="https://acps.uia.no/blog/">
 			 <img src="uia-logo.png" style="width:120px;"> </div></a>
 	</div>
 		 
 	<div class="container">
  	 <div class="img">
-		 <a href="https://raiith.library.iith.ac.in/jspui/handle/123456789/14934">
+		 <a href="https://www.instagram.com/reel/C1ZF4UgAPBJ/">
 			 <img src="iith_logo.png" style="width:100px;"> </div></a>
 	</div>
 		 
 	 <div class="container">
 	 <div class="img">
 		 <a href="https://people.iith.ac.in/ckm/#projects">
-			 <img src="vigil_logo.png" style="width:120px";></div></a>
+			 <img src="vigil_logo.png" style="width:130px";></div></a>
 			 
 	    </div>
 		 
