--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@ img{
         <div id="objective">
             <p>
                 <strong><font color="#323232">Assistant Professor</font></strong> </br> <b>Deep Learning, CSE Dept. IIT Tirupati</b> - <a href="https://www.linkedin.com/in/chalavadi-vishnu-phd/">LinkedIn</a></br>
-               Others - <a href="https://scholar.google.com/citations?hl=en&user=ZDaEPsEAAAAJ">Google Scholar</a> | <a href="https://www.semanticscholar.org/author/Vishnu-Chalavadi/2070209317">Semantic Scholar</a> | <a href="https://dblp.org/pid/302/7458.html">DBLP</a> | <a href="https://www.researchgate.net/profile/Chalavadi_Vishnu">ResearchGate</a> | <a href="https://orcid.org/0000-0001-9184-3545">ORCID</a> 
+               Others - <a href="https://scholar.google.com/citations?hl=en&user=ZDaEPsEAAAAJ">Google Scholar</a> | <a href="https://www.semanticscholar.org/author/Vishnu-Chalavadi/2070209317">Semantic Scholar</a> | <a href="https://www.researchgate.net/profile/Chalavadi_Vishnu">ResearchGate</a> | <a href="https://orcid.org/0000-0001-9184-3545">ORCID</a> 
             </p>
 
         </div>
@@ -123,7 +123,6 @@ img{
 		       <li><i>Object Oriented Programming Lab- CS101P</i>. Jan-Jun [2024]</li>
                 </ul>
             </dd>
-
 <dd class="clear"></dd>
 <hr style="height:1px;border-width:0;color:gray;background-color:gray">
 <br>
@@ -146,9 +145,7 @@ img{
 			<p><i> Dinesh Singh, <b>C. Vishnu</b>, Debaditya Roy, and C. Krishna Mohan</i> <br/>
 						<strong>Patent No. : </strong>410755. Issued - Nov 2, 2022 - <a href="https://drive.google.com/file/d/1Ge2ceHP6c3yWkt-5-TOtTr3C1_6Bt57K/view?usp=sharing">Link</a><br/>
                 </ul>
-                
-            </dd>
-				
+            </dd>	
 <dd class="clear"></dd>
 <hr style="height:1px;border-width:0;color:gray;background-color:gray">
 <br>
@@ -235,7 +232,6 @@ img{
 			<li>Best Essay in National Essay Writing Competition. - June, 2016</li>
 			
                 </ul>
-
 <dd class="clear"></dd>
 		<hr style="height:1px;border-width:0;color:gray;background-color:gray">
 <br>		
@@ -275,8 +271,6 @@ img{
 				   <strong>Duration : </strong> June, 2012 - July, 2016 <br/>
                    <strong>GPA : </strong> 7.7 </p>
             </dd>
-
-
 <dd class="clear"></dd>
 <hr style="height:1px;border-width:0;color:gray;background-color:gray">
 <br>
@@ -302,7 +296,6 @@ img{
                     <li>Shell Scripting/Powershell</li>
                     <li>MATLAB/R</li>
                 </ul>
-
 <dd class="clear"></dd>
 <hr style="height:1px;border-width:0;color:gray;background-color:gray">
 <br>
