--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@ img{
 	     
      </style>
 </head>
-<body>
+<body link="#C0C0C0" vlink="#808080" alink="#FF0000">
 
     <div id="page-wrap">
 
@@ -116,11 +116,11 @@ img{
             <dd>
 		      <h4>Courses</h4>
                <ul>
-		       <li><i>Adversarial Deep Learning - CS5XXL</i>. Jul-Dec [2025]</li>
-		       <li><i>Deep Learning - CS518L</i>. Jan-Jun [2025, 2024]</li>
-		       <li><i>Data Structures and Algorithms with Lab - CS204L/P</i>. Jul-Dec [2024]</li>
-		       <li><i>Introduction to Programming with Lab- ES104M</i>. Jul-Dec [2024]</li>
-		       <li><i>Object Oriented Programming Lab- CS101P</i>. Jan-Jun [2024]</li>
+		       <li><i>Adversarial Deep Learning (CS5XXL)</i>. Jul-Dec [2025]</li>
+		       <li><i>Deep Learning (CS518L)</i>. Jan-Jun [2025, 2024]</li>
+		       <li><i>Data Structures and Algorithms with Lab (CS204L/P)</i>. Jul-Dec [2024]</li>
+		       <li><i>Introduction to Programming with Lab (ES104M)</i>. Jul-Dec [2024]</li>
+		       <li><i>Object Oriented Programming Lab (CS101P)</i>. Jan-Jun [2024]</li>
                 </ul>
             </dd>
 <dd class="clear"></dd>
