--- a/index.html
+++ b/index.html
@@ -241,11 +241,11 @@ img{
             <dd>
 		    <h4>Teaching Assistance</h4>
                <ul>
-		       <li><i>(CS6880) <b>Multimedia Content Analysis</b></i> By Dr. C. Krishna Mohan. July [2021]</li>
-                    <li><i>(CS6170) <b>CV for Autonomous Vehicle Technology</b></i> By Dr. C. Krishna Mohan. July [2020]</li>
-                    <li><i>(CS6870) <b>Surveillance Video Analytics</b></i> By Dr. C. Krishna Mohan. January [2020]</li>
-		    <li><i>(CS6210) <b>Advanced Machine Learning</b></i> By Dr. C. Krishna Mohan. July [2019]</li>
-                    <li><i>(CS6140) <b>Video Content Analysis</b></i> By Dr. C. Krishna Mohan. January [2019]</li>
+		       <li><i>(CS6880) <b>Multimedia Content Analysis</b></i>. Jul-Dec [2021]</li>
+                    <li><i>(CS6170) <b>CV for Autonomous Vehicle Technology</b></i>. Jul-Dec [2020]</li>
+                    <li><i>(CS6870) <b>Surveillance Video Analytics</b></i>. Jan-Jul [2020]</li>
+		    <li><i>(CS6210) <b>Advanced Machine Learning</b></i>. Jul-Dec [2019]</li>
+                    <li><i>(CS6140) <b>Video Content Analysis</b></i>. Jan-Jul [2019]</li>
                 </ul>
 		    
 		    <hr style="height:1px;border-width:0;color:gray;background-color:gray"> <br>
