--- a/index.html
+++ b/index.html
@@ -133,17 +133,17 @@ img{
 		    <h4>Method and System for Detection of Crime Events in Surveillance Videos</h4>
                 <ul>
 			<p><i> Debaditya Roy, <b>C. Vishnu</b>, Dinesh Singh, and C. Krishna Mohan </i><br/>
-						<strong>Patent No. : </strong>516052. Issued - Feb 27, 2024 - <a href="https://drive.google.com/file/d/1x9vZo5wY-GfbGBLafwQvEL5WCHMyLGn1/view?usp=sharing">Link</a><br/>
+						<strong>Patent No. : </strong>516052. <b>Issued</b> - Feb 27, 2024 - <a href="https://drive.google.com/file/d/1x9vZo5wY-GfbGBLafwQvEL5WCHMyLGn1/view?usp=sharing">Link</a><br/>
                 </ul>
 		     <h4>A Method and System for Real-time Detection of Traffic Violation by Two-wheeled Riders</h4>
                 <ul>
 			<p><i><b>C. Vishnu</b>, Dinesh Singh, Debaditya Roy, and C. Krishna Mohan </i><br/>
-						<strong>Patent No. : </strong>414669. Issued - Dec 15, 2022 - <a href="https://drive.google.com/file/d/1jA0S9xTVicHlwciK8wskmf-lfMN-3nhP/view?usp=sharing">Link</a>  <br/>
+						<strong>Patent No. : </strong>414669. <b>Issued</b> - Dec 15, 2022 - <a href="https://drive.google.com/file/d/1jA0S9xTVicHlwciK8wskmf-lfMN-3nhP/view?usp=sharing">Link</a>  <br/>
                 </ul>
 		 <h4>Method and System for Detection of Accident in Traffic Surveillance Videos</h4>
                 <ul>
 			<p><i> Dinesh Singh, <b>C. Vishnu</b>, Debaditya Roy, and C. Krishna Mohan</i> <br/>
-						<strong>Patent No. : </strong>410755. Issued - Nov 2, 2022 - <a href="https://drive.google.com/file/d/1Ge2ceHP6c3yWkt-5-TOtTr3C1_6Bt57K/view?usp=sharing">Link</a><br/>
+						<strong>Patent No. : </strong>410755. <b>Issued</b> - Nov 2, 2022 - <a href="https://drive.google.com/file/d/1Ge2ceHP6c3yWkt-5-TOtTr3C1_6Bt57K/view?usp=sharing">Link</a><br/>
                 </ul>
             </dd>	
 <dd class="clear"></dd>
