--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@ img{
 
         <div id="objective">
             <p>
-                <strong><font color="#323232">Assistant Professor</font></strong> </br> <b>Deep Learning, CSE Dept. IIT Tirupati</b> - <a href="https://www.linkedin.com/in/chalavadi-vishnu-phd/">LinkedIn</a></br>
+                <strong><font color="#323232">Assistant Professor</font></strong> </br> <b>Deep Learning, CSE Dept. IIT Tirupati</b> - <a href="https://www.linkedin.com/in/chalavadivishnu/">LinkedIn</a></br>
                Others - <a href="https://scholar.google.com/citations?hl=en&user=ZDaEPsEAAAAJ">Google Scholar</a> | <a href="https://www.semanticscholar.org/author/Vishnu-Chalavadi/2070209317">Semantic Scholar</a> | <a href="https://www.researchgate.net/profile/Chalavadi_Vishnu">ResearchGate</a> | <a href="https://orcid.org/0000-0001-9184-3545">ORCID</a> 
             </p>
 
